# nz-legislation

./: .eslintrc.json  .gitignore  .lintstagedrc.json  .markdownlint.json  .oxlintrc.json  .prettierignore  .prettierrc  .vale.ini  API_CREDENTIALS_FOUND.md  AUTONOMOUS_EXECUTION_SUMMARY.md  AUTO_PUBLISH.md  CHANGELOG.md  CHANGESETS.md  CHANGSETS_GUIDE.md  CONDUCTOR_ARCHITECTURE.md  CONDUCTOR_SEPARATION.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  ENHANCED_AUTONOMOUS_SUMMARY.md  ENTERPRISE_SETUP_COMPLETE.md  FINAL_STATUS.md  GITHUB_SETUP.md  IMPROVEMENTS.md  MODULAR_ARCHITECTURE_SUMMARY.md  NEXT_STEPS.md  PHASE_0_COMPLETE.md  PHASE_1_COMPLETE.md  PROJECT_COMPLETE.md  PROJECT_SEPARATION_GUARDRAILS.md  PROJECT_SEPARATION_SUMMARY.md  PROJECT_STATUS.md  PUBLISHING_IN_PROGRESS.md  PUBLISH_NPM.md  README-IASN2001657.md  README.md  README_REWRITE_DRAFT.md  RELEASE_INSTRUCTIONS.md  RELEASE_POLICY.md  RELEASE_v1.1.0.md  REVIEW_FIXES.md  (+37 more)
.changeset/: act-source-shape-gate.md  aggregator-provider-evaluation.md  australian-source-inventory.md  blue-forks-cheat.md  capabilities-runtime-view.md  commonwealth-adapter-foundation.md  commonwealth-client-wrapper.md  commonwealth-prerelease-runtime.md  commonwealth-provider-adapter.md  commonwealth-rust-request-parity.md  conductor-requirements-contracts.md  config.json  dependency-security-overrides.md  eleven-parents-worry.md  fifty-towns-care.md  format-policy-cleanup.md  gazette-source-readiness.md  install-snippet-gate.md  install-snippet-smoke.md  loud-camels-share.md  manifest-docs-drift-gate.md  nsw-source-shape.md  nt-provider-source-shape.md  package-metadata-gate.md  performance-scalability-release.md  pre.json  provider-aware-export-mcp.md  provider-capability-manifest.md  provider-implementation-tracks.md  provider-registry-foundation.md  provider-runtime-gates.md  provider-source-cards.md  qld-nsw-source-validation.md  qld-source-shape.md  registry-readiness-contract.md  release-notes-gate.md  release-readiness-gates.md  rust-cli-contract.md  rust-contract-cli.md  rust-contract-validation.md  (+25 more)
.claude/: ralph-loop.local.md
.gemini/: ralph-loop.local.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
archive/: EXTRACTION_INSTRUCTIONS.md  do_extract.ps1  extract.js  extract.ps1  extract.sh  extract_all.ps1  extract_and_report.py  extract_zips.py  list_zip_contents.py  list_zips.ps1  list_zips.py  list_zips2.ps1  run_extract.py
nz-legislation-clean/nz-legislation/: API_KEY_SETUP.md  CONTRIBUTING.md  Cargo.toml
nz-legislation-clean/nz-legislation/src/: config.rs  error.rs  output.rs
nz-legislation-clean/nz-legislation/src/commands/: export.rs
rust/compatibility-contract/: Cargo.toml
rust/compatibility-contract/src/: http.rs  lib.rs
(+924 files in other folders)
