[package]
name = "nz-legislation"
version = "0.1.0"
edition = "2021"
authors = ["Dylan Mordaunt <dylan.mordaunt@vuw.ac.nz>"]
description = "CLI tool for accessing New Zealand legislation data"
license = "Apache-2.0"
repository = "https://github.com/dylanmordaunt/nz-legislation"
keywords = ["nz", "legislation", "cli", "legal-tech", "research"]
categories = ["command-line-utilities"]

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
dotenvy = "0.15"
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Table output
comfy-table = "7.1"

# URL handling
url = "2.5"

# HTTP types
http = "1.0"

# Directories
dirs = "5.0"

# CSV output
csv = "1.3"

[dev-dependencies]
# Testing
tokio-test = "0.4"
wiremock = "0.5"

# For temporary files in tests
tempfile = "3.9"

[[bin]]
name = "nzlegislation"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
