[package]
name = "legislation-compatibility-contract"
version = "0.1.0"
edition = "2021"
publish = false
description = "In-repository Rust migration compatibility contract; not a production runtime"

[lib]
path = "src/lib.rs"

[features]
default = []
network = ["dep:ureq"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2.12", optional = true, default-features = false, features = ["tls"] }

[dev-dependencies]
